--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -574,8 +574,8 @@ iframe,
 embed,
 object {
   display: block;
+  vertical-align: middle;
 }
-
 
 /**
  * Constrain images and videos to the parent width and preserve
@@ -587,12 +587,12 @@ object {
 img,
 video {
   max-width: 100%;
+  height: auto;
 }
 
 .container {
   width: 100%;
 }
-
 
 @media (min-width: 640px) {
   .container {
@@ -6243,10 +6243,6 @@ video {
 
 .h-72 {
   height: 18rem;
-}
-
-.h-86 {
-  height: 22rem;
 }
 
 .h-auto {
