--- a/frontend/src/components/shop/home/style.css
+++ b/frontend/src/components/shop/home/style.css
@@ -25,3 +25,57 @@
   background: #b7791f;
   cursor: pointer;
 }
+
+.slider-img {
+  height: 100vh;
+}
+
+
+.btn {
+  display: inline-block;
+  width: 100%;
+  font-weight: 500;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.4rem;
+  border-radius: 0.25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  margin-bottom: 5px;
+}
+
+.btn-loadmore {
+  color: #fff;
+  background-color: #303031;
+  border: none;
+}
+
+.btn-loadmore:hover {
+  color: #ffffffea;
+  background-color: #303031ce;
+  border: none;
+}
+
+.btn-loadmore:active {
+  -webkit-box-shadow: 1px 2px 15px 6px #303031b3; 
+  box-shadow: 1px 2px 15px 6px #303031b3;
+}
+
+@media screen and (max-width: 425px){
+  .btn {
+      font-size: 1rem;
+  }
+  
+  .btn-loadmore {
+      color: #fff;
+      background-color: #303031;
+  }
+}
