--- a/frontend/src/components/shop/home/style.css
+++ b/frontend/src/components/shop/home/style.css
@@ -74,35 +74,18 @@
   margin-top: 29rem;
 }
 
-@media (max-width: 991px) {
-  .card {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-  }
+.card-image {
+  height: 290px
 }
-@media (max-width: 480px) {
-  .card {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-    -webkit-column-width: 100%;
-    -moz-column-width: 100%;
-    column-width: 100%;
+
+
+@media screen and (max-width: 1440px){
+  .mt-button-svg {
+    margin-top: 19.5rem;
   }
 }
 
-@media screen and (max-width: 425px) and (max-height: ()){
-  .btn {
-      font-size: 1rem;
-  }
-  
-  .btn-loadmore {
-      color: #fff;
-      background-color: #303031;
-  }
-}
-@media screen and (max-width: 425px) and (max-height: 900px) {
+@media screen and (max-width: 425px) {
   .slider-img {
     height: 70vh;
   }
@@ -111,6 +94,17 @@
     margin-top: 15.5rem;
   }
 
-  
+  .btn {
+    font-size: 1rem;
+  }
+
+  .btn-loadmore {
+      color: #fff;
+      background-color: #303031;
+  }
+
+  .card-image {
+    height: 230px
+  }
 }
 
